--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "streetsmart",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -25,5 +25,7 @@
     "express": "^4.14.0",
     "mongoose": "^4.5.5",
     "nodemon": "^1.9.2"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
